[tx-robot] updated from transifex

--- a/l10n/el.json
+++ b/l10n/el.json
@@ -1,4 +1,5 @@
 { "translations": {
+    "Terms of service" : "Όροι χρήσης",
     "Afghanistan" : "Αφγανιστάν",
     "Albania" : "Αλβανία",
     "Algeria" : "Αλγερία",
@@ -103,6 +104,8 @@
     "Rwanda" : "Ρουάντα",
     "Samoa" : "Σαμόα",
     "San Marino" : "Σαν Μαρίνο",
+    "Saudi Arabia" : "Σαουδική Αραβία",
+    "Senegal" : "Σενεγάλη",
     "Serbia" : "Σερβία",
     "Seychelles" : "Σεϊχέλες",
     "Sierra Leone" : "Σιέρα Λεόνε",
@@ -112,6 +115,7 @@
     "Solomon Islands" : "Νησιά Σολομώντα",
     "Somalia" : "Σομαλία",
     "South Africa" : "Νότιος Αφρική",
+    "South Sudan" : "Νότιο Σουδάν",
     "Spain" : "Ισπανία",
     "Sri Lanka" : "Σρι Λάνκα",
     "Sudan" : "Σουδάν",
@@ -134,6 +138,24 @@
     "Yemen" : "Υεμένη",
     "Zambia" : "Ζάμπια",
     "Zimbabwe" : "Ζιμπάμπουε",
+    "Corsican" : "Κορσικά",
+    "Czech" : "Τσέχικα",
+    "Greek, Modern (1453-)" : "Ελληνικά, Μοντέρνα (1453-)",
+    "English" : "Αγγλικά",
+    "Esperanto" : "Εσπεράντο",
+    "Basque" : "Βασικικά",
+    "Persian" : "Περσικά",
+    "Finnish" : "Φινλανδικά",
+    "French" : "Γαλλικά",
+    "Hebrew" : "Εβραϊκά",
+    "Croatian" : "Κροατικά",
+    "Indonesian" : "Ινδονησιακά",
+    "Icelandic" : "Ισλανδικά",
+    "Italian" : "Ιταλικά",
+    "Korean" : "Κορεάτικα",
+    "Kurdish" : "Κουρδικά",
+    "Lithuanian" : "Λιθουανικά",
+    "Macedonian" : "Βόρειο Μακεδονικά",
     "Saving …" : "Αποθηκεύεται ...",
     "Saved!" : "Αποθηκεύτηκε!",
     "Save" : "Αποθήκευση",
