--- a/l10n/es.json
+++ b/l10n/es.json
@@ -361,32 +361,46 @@
     "Maltese" : "maltés",
     "Burmese" : "burmés",
     "BokmOEl, Norwegian; Norwegian BokmOEl" : "Bokmål, Noruego; Noruego Bokmål",
+    "Ndebele, North; North Ndebele" : "ndebele septentrional; ndebele del norte",
     "Nepali" : "nepalí",
     "Ndonga" : "Ndonga",
     "Dutch; Flemish" : "Holandés; Flamenco",
+    "Norwegian Nynorsk; Nynorsk, Norwegian" : "nynorsk noruego",
     "Norwegian" : "noruego",
+    "Ndebele, South; South Ndebele" : "ndbele meridional, ndbele del sur",
     "Navajo; Navaho" : "navajo; navaho",
+    "Chichewa; Chewa; Nyanja" : "chichewa, chewa, nyanja",
     "Occitan (post 1500)" : "occitano (posterior a 1500)",
+    "Ojibwa" : "ojibwa",
     "Oromo" : "oromo",
     "Oriya" : "oriya",
     "Ossetian; Ossetic" : "osetio",
     "Panjabi; Punjabi" : "panjabí; punjabí",
+    "Pali" : "pali",
     "Polish" : "polaco",
+    "Pushto; Pashto" : "pastún",
     "Portuguese" : "portuguś",
     "Quechua" : "quechua",
+    "Romansh" : "romanche",
+    "Rundi" : "rundi",
+    "Romanian; Moldavian; Moldovan" : "rumano; moldavo",
     "Russian" : "ruso",
+    "Kinyarwanda" : "kinyarwanda",
     "Sanskrit" : "sánscrito",
     "Sardinian" : "sardo",
     "Sindhi" : "sindi",
     "Northern Sami" : "sami meridional",
     "Sango" : "sango",
+    "Sinhala; Sinhalese" : "sinhala, sinhalés",
     "Slovak" : "eslovaco",
     "Slovenian" : "eslovenio",
     "Samoan" : "samoano",
     "Shona" : "shona",
     "Somali" : "somalí",
+    "Albanian" : "albanés",
     "Serbian" : "serbio",
     "Swati" : "suati",
+    "Sotho, Southern" : "sotho meridional",
     "Sundanese" : "sondanés",
     "Swedish" : "sueco",
     "Swahili" : "suajili",
@@ -397,29 +411,40 @@
     "Tigrinya" : "tigrinya",
     "Turkmen" : "turcomano",
     "Tagalog" : "tagalo",
+    "Tswana" : "tswana",
     "Tonga (Tonga Islands)" : "tonga (Islas Tonga)",
     "Turkish" : "turco",
     "Tsonga" : "tsonga",
     "Tatar" : "tártaro",
+    "Twi" : "twi",
     "Tahitian" : "tahitiano",
     "Uighur; Uyghur" : "uigur; uygur",
     "Ukrainian" : "ucraniano",
     "Urdu" : "urdu",
     "Uzbek" : "uzbeco",
+    "Venda" : "venda",
     "Vietnamese" : "vietamita",
+    "VolapYk" : "volapük",
+    "Walloon" : "walloon",
     "Wolof" : "wolof",
     "Xhosa" : "xhosa",
     "Yiddish" : "yidis",
     "Yoruba" : "yoruba",
+    "Zhuang; Chuang" : "zhuang; chuang",
     "Chinese" : "chino",
     "Zulu" : "zulú",
     "Terms of service have been modified!" : "¡Se han modificado los términos del servicio!",
     "You have to accept the newest version of the terms of service in order to be able to use this service." : "Tienes que aceptar la última versión de los términos del servicio para poder usar este servicio.",
     "Requires users to accept the terms of service before accessing data." : "Requiere a los usuarios que acepten los términos del servicio antes de acceder a los datos.",
     "Requires users to accept the terms of service before accessing data.\nThis product includes GeoLite2 data created by MaxMind, available from [maxmind.com](http://www.maxmind.com)" : "Requiere a los usuarios que acepten los términos del servicio antes de acceder a los datos.\nEste producto incluye datos de GeoLite2, creado por MaxMind, disponible desde [maxmind.com](http://www.maxmind.com).",
+    "For formatting purposes Markdown is supported." : "para propósitos de formateo Markdown está soportado.",
+    "Existing terms of service" : "Actuales términos del servicio",
     "Saving …" : "Guardando ...",
     "Saved!" : "¡Guardado!",
     "Save" : "Guardar",
+    "Resetting …" : "Volviendo…",
+    "Reset!" : "Reseteado.",
+    "Reset all signatories" : "Resetear todos los firmantes",
     "Loading …" : "Cargando...",
     "Edit" : "Editar",
     "Delete" : "Borrar",
