--- a/l10n/it.json
+++ b/l10n/it.json
@@ -79,6 +79,7 @@
     "France" : "Francia",
     "French Guiana" : "Guiana Francese",
     "French Polynesia" : "Polinesia Francese",
+    "French Southern Territories" : "Terre Australi Francesi",
     "Gabon" : "Gabon",
     "Gambia" : "Gambia",
     "Georgia" : "Georgia",
@@ -164,6 +165,7 @@
     "Nigeria" : "Nigeria",
     "Niue" : "Niue",
     "Norfolk Island" : "Isola Norfolk",
+    "Northern Mariana Islands" : "Isole Marianne settentrionali",
     "Norway" : "Norvegia",
     "Oman" : "Oman",
     "Pakistan" : "Pakistan",
@@ -183,9 +185,13 @@
     "Romania" : "Romania",
     "Russian Federation" : "Federazione Russa",
     "Rwanda" : "Ruanda",
+    "Saint Barthelemy" : "Saint Barthelemy",
+    "Saint Helena, Ascension and Tristan da Cunha" : "Sant'Elena, Ascensione e Tristan da Cunha",
     "Saint Kitts and Nevis" : "Saint Kitts e Nevis",
+    "Saint Lucia" : "Saint Lucia",
     "Saint Martin (French part)" : "Saint Martin (parte francese)",
     "Saint Pierre and Miquelon" : "Saint Pierre e Miquelon",
+    "Saint Vincent and the Grenadines" : "Saint Vincent e Grenadine",
     "Samoa" : "Samoa",
     "San Marino" : "San Marino",
     "Sao Tome and Principe" : "Sao Tome e Principe",
@@ -201,6 +207,7 @@
     "Solomon Islands" : "Isole Salomone",
     "Somalia" : "Somalia",
     "South Africa" : "Sud Africa",
+    "South Georgia and the South Sandwich Islands" : "Georgia del Sud e Isole Sandwich Australi",
     "South Sudan" : "Sud Sudan",
     "Spain" : "Spagna",
     "Sri Lanka" : "Sri Lanka",
@@ -212,7 +219,10 @@
     "Switzerland" : "Svizzera",
     "Syrian Arab Republic" : "Repubblica Araba Siriana",
     "Taiwan, Province of China" : "Taiwan, Provincia della Cina",
+    "Tajikistan" : "Tagikistan",
+    "Tanzania, United Republic of" : "Tanzania, Repubblica Unita di",
     "Thailand" : "Thailandia",
+    "Timor-Leste" : "Timor Est",
     "Togo" : "Togo",
     "Tokelau" : "Tokelau",
     "Tonga" : "Tonga",
@@ -227,31 +237,55 @@
     "United Arab Emirates" : "Emirati Arabi Uniti",
     "United Kingdom of Great Britain and Northern Ireland" : "Regno Unito di Gran Bretagna e Irlanda del Nord",
     "United States of America" : "Stati Uniti d'America",
+    "United States Minor Outlying Islands" : "Isole minori esterne degli Stati Uniti d'America",
     "Uruguay" : "Uruguay",
     "Uzbekistan" : "Uzbekistan",
     "Vanuatu" : "Vanuatu",
     "Venezuela (Bolivarian Republic of)" : "Venezuela (Repubblica Bolivariana di)",
     "Viet Nam" : "Vietnam",
+    "Virgin Islands (British)" : "Isole Vergini (Britanniche)",
+    "Virgin Islands (U.S.)" : "Isole Vergini (U.S.A.)",
     "Wallis and Futuna" : "Wallis e Futuna",
     "Western Sahara" : "Sahara occidentale",
     "Yemen" : "Yemen",
     "Zambia" : "Zambia",
     "Zimbabwe" : "Zimbabwe",
     "Afar" : "Afar",
+    "Abkhazian" : "Abcaso",
     "Avestan" : "Avestan",
     "Afrikaans" : "Afrikaans",
+    "Akan" : "Akan",
+    "Amharic" : "Amarico",
+    "Aragonese" : "Aragonese",
     "Arabic" : "Arabo",
+    "Assamese" : "Assamese",
+    "Avaric" : "Avaro",
+    "Aymara" : "Aymara",
+    "Azerbaijani" : "Azero",
+    "Bashkir" : "Baschiro",
     "Belarusian" : "Bielorusso",
     "Bulgarian" : "Bulgaro",
+    "Bihari languages" : "Lingue Bihari",
+    "Bislama" : "Bislama",
+    "Bambara" : "Bambara",
+    "Bengali" : "Bengali",
     "Tibetan" : "Tibetano",
     "Breton" : "Bretone",
     "Bosnian" : "Bosniaco",
     "Catalan; Valencian" : "Catalano; Valenziano",
+    "Chechen" : "Ceceno",
+    "Chamorro" : "Chamorro",
     "Corsican" : "Corso",
+    "Cree" : "Cree",
     "Czech" : "Ceco",
+    "Church Slavic; Old Slavonic; Church Slavonic; Old Bulgarian; Old Church Slavonic" : "Slavo ecclesiastico; Slavo antico; Slavico ecclesiastico; Bulgaro antico, Slavonico ecclesiastico antico",
+    "Chuvash" : "Ciuvascio",
     "Welsh" : "Gallese",
     "Danish" : "Danese",
     "German" : "Tedesco",
+    "Divehi; Dhivehi; Maldivian" : "Divehi; Dhivehi; Maldiviano",
+    "Dzongkha" : "Dzongkha",
+    "Ewe" : "Ewe",
     "Greek, Modern (1453-)" : "Greco, Moderno (1453-)",
     "English" : "Inglese",
     "Esperanto" : "Esperanto",
@@ -259,65 +293,151 @@
     "Estonian" : "Estone",
     "Basque" : "Basco",
     "Persian" : "Persiano",
+    "Fulah" : "Fula",
     "Finnish" : "Finlandese",
+    "Fijian" : "Figiano",
+    "Faroese" : "Faroese",
     "French" : "Francese",
+    "Western Frisian" : "Frisone occidentale",
     "Irish" : "Irlandese",
     "Gaelic; Scottish Gaelic" : "Gaelico; Gaelico scozzese",
     "Galician" : "Galiziano",
+    "Guarani" : "Guarani",
+    "Gujarati" : "Gujarati",
+    "Manx" : "Mannese",
+    "Hausa" : "Hausa",
     "Hebrew" : "Ebreo",
+    "Hindi" : "Hindi",
+    "Hiri Motu" : "Hiri Motu",
     "Croatian" : "Croato",
+    "Haitian; Haitian Creole" : "Haitiano; Creolo Haitiano",
     "Hungarian" : "Ungherese",
     "Armenian" : "Armeno",
+    "Herero" : "Herero",
+    "Interlingua (International Auxiliary Language Association)" : "Interlingua (Associazione per la lingua ausiliaria internazionale)",
     "Indonesian" : "Indonesiano",
     "Interlingue; Occidental" : "Interlingua; Occidentale",
+    "Igbo" : "Igbo",
+    "Sichuan Yi; Nuosu" : "Sichuan Yi; Nuosu",
+    "Inupiaq" : "Inupiaq",
+    "Ido" : "Ido",
     "Icelandic" : "Islandese",
     "Italian" : "Italiano",
+    "Inuktitut" : "Inuktitut",
     "Japanese" : "Giapponese",
+    "Javanese" : "Giavanese",
     "Georgian" : "Georgiano",
+    "Kongo" : "Kongo",
+    "Kikuyu; Gikuyu" : "Kikuyu; Gikuyu",
+    "Kuanyama; Kwanyama" : "Kuanyama; Kwanyama",
     "Kazakh" : "Kazako",
+    "Kalaallisut; Greenlandic" : "Kalaallisut; Groenlandese",
+    "Central Khmer" : "Khmer Centrale",
+    "Kannada" : "Kannada",
     "Korean" : "Coreano",
+    "Kanuri" : "Kanuri",
+    "Kashmiri" : "Kashmiri",
+    "Kurdish" : "Curdo",
+    "Komi" : "Komi",
+    "Cornish" : "Cornico",
+    "Kirghiz; Kyrgyz" : "Chirghiso",
     "Latin" : "Latino",
+    "Luxembourgish; Letzeburgesch" : "Lussemburghese; Letzeburgesch",
+    "Ganda" : "Ganda",
+    "Limburgan; Limburger; Limburgish" : "Limburgan; Limburger; Limburghese",
+    "Lingala" : "Lingala",
+    "Lao" : "Lao",
     "Lithuanian" : "Lituano",
+    "Luba-Katanga" : "Luba-Katanga",
     "Latvian" : "Lettone",
+    "Malagasy" : "Malgascio",
+    "Marshallese" : "Marshallese",
     "Maori" : "Maori",
     "Macedonian" : "Macedone",
+    "Malayalam" : "Malayalam",
     "Mongolian" : "Mongolo",
+    "Marathi" : "Marathi",
+    "Malay" : "Malese",
     "Maltese" : "Maltese",
+    "Burmese" : "Birmano",
+    "BokmOEl, Norwegian; Norwegian BokmOEl" : "BokmOEl, Norvegese; BokmOEl Norvegese",
+    "Ndebele, North; North Ndebele" : "Ndebele, Nord; Ndebele del Nord",
     "Nepali" : "Nepalese",
+    "Ndonga" : "Ndonga",
     "Dutch; Flemish" : "Olandese; Fiammingo",
+    "Norwegian Nynorsk; Nynorsk, Norwegian" : "Nynorsk norvegese; Nynorsk, Norvegese",
     "Norwegian" : "Norvegese",
+    "Ndebele, South; South Ndebele" : "Ndebele, Sud; Ndebele del Sud",
     "Navajo; Navaho" : "Navajo; Navaho",
+    "Chichewa; Chewa; Nyanja" : "Chichewa; Chewa; Nyanja",
     "Occitan (post 1500)" : "Occitano (dopo 1500)",
+    "Ojibwa" : "Ojibwa",
+    "Oromo" : "Oromo",
+    "Oriya" : "Oriya",
+    "Ossetian; Ossetic" : "Osseziano; Ossetico",
+    "Panjabi; Punjabi" : "Panjabi; Punjabi",
+    "Pali" : "Pali",
     "Polish" : "Polacco",
+    "Pushto; Pashto" : "Pushto; Pashto",
     "Portuguese" : "Portoghese",
     "Quechua" : "Quechua",
     "Romansh" : "Romangio",
+    "Rundi" : "Rundi",
+    "Romanian; Moldavian; Moldovan" : "Romeno; Moldavo; Moldovano",
     "Russian" : "Russo",
+    "Kinyarwanda" : "Kinyarwanda",
     "Sanskrit" : "Sanscrito",
     "Sardinian" : "Sardo",
+    "Sindhi" : "Sindhi",
+    "Northern Sami" : "Sami Settentrionale",
+    "Sango" : "Sango",
+    "Sinhala; Sinhalese" : "Sinhala; Cingalese",
     "Slovak" : "Slovacco",
     "Slovenian" : "Sloveno",
     "Samoan" : "Samoano",
+    "Shona" : "Shona",
     "Somali" : "Somalo",
     "Albanian" : "Albanese",
     "Serbian" : "Serbo",
+    "Swati" : "Swati",
+    "Sotho, Southern" : "Sotho, del sud",
+    "Sundanese" : "Sundanese",
     "Swedish" : "Svedese",
     "Swahili" : "Swahili",
     "Tamil" : "Tamil",
     "Telugu" : "Telugu",
     "Tajik" : "Tajiko",
     "Thai" : "Thai",
+    "Tigrinya" : "Tigrino",
     "Turkmen" : "Turkmeno",
     "Tagalog" : "Tagalog",
+    "Tswana" : "Tswana",
+    "Tonga (Tonga Islands)" : "Tonga (Isole Tonga)",
     "Turkish" : "Turco",
+    "Tsonga" : "Tsonga",
+    "Tatar" : "Tataro",
+    "Twi" : "Twi",
+    "Tahitian" : "Tahitiano",
+    "Uighur; Uyghur" : "Uiguro",
     "Ukrainian" : "Ucraino",
     "Urdu" : "Urdu",
     "Uzbek" : "Uzbeko",
+    "Venda" : "Venda",
     "Vietnamese" : "Vietnamita",
+    "VolapYk" : "VolapYk",
     "Walloon" : "Vallone",
+    "Wolof" : "Wolof",
+    "Xhosa" : "Xhosa",
+    "Yiddish" : "Yiddish",
+    "Yoruba" : "Yoruba",
+    "Zhuang; Chuang" : "Zhuang; Chuang",
     "Chinese" : "Cinese",
     "Zulu" : "Zulu",
     "Terms of service have been modified!" : "I termini del servizio sono stati modificati!",
+    "You have to accept the newest version of the terms of service in order to be able to use this service." : "Devi accettare l'ultima versione dei termini del servizio per poter utilizzare questo servizio.",
+    "Requires users to accept the terms of service before accessing data." : "Richiede che gli utenti accettino i termini del servizio prima di accedere ai dati.",
+    "Requires users to accept the terms of service before accessing data.\nThis product includes GeoLite2 data created by MaxMind, available from [maxmind.com](http://www.maxmind.com)" : "Richiede che gli utenti accettino i termini del servizio prima di accedere ai dati.\nQuesto prodotto include i dati di GeoLite2 creato da MaxMind, disponibile presso [maxmind.com](http://www.maxmind.com)",
+    "For formatting purposes Markdown is supported." : "Per scopi di formattazione, Markdown è supportato.",
     "Existing terms of service" : "Termini del servizio esistenti",
     "Saving …" : "Salvataggio in corso…",
     "Saved!" : "Salvato!",
